--- a/intro.ipynb
+++ b/intro.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -78,14 +78,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html PUBLIC \"-//W3C//DTD HTML 4.01//EN\"\n",
+       "   \"http://www.w3.org/TR/html4/strict.dtd\">\n",
+       "\n",
+       "<html>\n",
+       "<head>\n",
+       "  <title></title>\n",
+       "  <meta http-equiv=\"content-type\" content=\"text/html; charset=None\">\n",
+       "  <style type=\"text/css\">\n",
+       "td.linenos { background-color: #f0f0f0; padding-right: 10px; }\n",
+       "span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }\n",
+       "pre { line-height: 125%; }\n",
+       "body .hll { background-color: #ffffcc }\n",
+       "body  { background: #f8f8f8; }\n",
+       "body .c { color: #408080; font-style: italic } /* Comment */\n",
+       "body .err { border: 1px solid #FF0000 } /* Error */\n",
+       "body .k { color: #008000; font-weight: bold } /* Keyword */\n",
+       "body .o { color: #666666 } /* Operator */\n",
+       "body .ch { color: #408080; font-style: italic } /* Comment.Hashbang */\n",
+       "body .cm { color: #408080; font-style: italic } /* Comment.Multiline */\n",
+       "body .cp { color: #BC7A00 } /* Comment.Preproc */\n",
+       "body .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */\n",
+       "body .c1 { color: #408080; font-style: italic } /* Comment.Single */\n",
+       "body .cs { color: #408080; font-style: italic } /* Comment.Special */\n",
+       "body .gd { color: #A00000 } /* Generic.Deleted */\n",
+       "body .ge { font-style: italic } /* Generic.Emph */\n",
+       "body .gr { color: #FF0000 } /* Generic.Error */\n",
+       "body .gh { color: #000080; font-weight: bold } /* Generic.Heading */\n",
+       "body .gi { color: #00A000 } /* Generic.Inserted */\n",
+       "body .go { color: #888888 } /* Generic.Output */\n",
+       "body .gp { color: #000080; font-weight: bold } /* Generic.Prompt */\n",
+       "body .gs { font-weight: bold } /* Generic.Strong */\n",
+       "body .gu { color: #800080; font-weight: bold } /* Generic.Subheading */\n",
+       "body .gt { color: #0044DD } /* Generic.Traceback */\n",
+       "body .kc { color: #008000; font-weight: bold } /* Keyword.Constant */\n",
+       "body .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */\n",
+       "body .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */\n",
+       "body .kp { color: #008000 } /* Keyword.Pseudo */\n",
+       "body .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */\n",
+       "body .kt { color: #B00040 } /* Keyword.Type */\n",
+       "body .m { color: #666666 } /* Literal.Number */\n",
+       "body .s { color: #BA2121 } /* Literal.String */\n",
+       "body .na { color: #7D9029 } /* Name.Attribute */\n",
+       "body .nb { color: #008000 } /* Name.Builtin */\n",
+       "body .nc { color: #0000FF; font-weight: bold } /* Name.Class */\n",
+       "body .no { color: #880000 } /* Name.Constant */\n",
+       "body .nd { color: #AA22FF } /* Name.Decorator */\n",
+       "body .ni { color: #999999; font-weight: bold } /* Name.Entity */\n",
+       "body .ne { color: #D2413A; font-weight: bold } /* Name.Exception */\n",
+       "body .nf { color: #0000FF } /* Name.Function */\n",
+       "body .nl { color: #A0A000 } /* Name.Label */\n",
+       "body .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */\n",
+       "body .nt { color: #008000; font-weight: bold } /* Name.Tag */\n",
+       "body .nv { color: #19177C } /* Name.Variable */\n",
+       "body .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */\n",
+       "body .w { color: #bbbbbb } /* Text.Whitespace */\n",
+       "body .mb { color: #666666 } /* Literal.Number.Bin */\n",
+       "body .mf { color: #666666 } /* Literal.Number.Float */\n",
+       "body .mh { color: #666666 } /* Literal.Number.Hex */\n",
+       "body .mi { color: #666666 } /* Literal.Number.Integer */\n",
+       "body .mo { color: #666666 } /* Literal.Number.Oct */\n",
+       "body .sb { color: #BA2121 } /* Literal.String.Backtick */\n",
+       "body .sc { color: #BA2121 } /* Literal.String.Char */\n",
+       "body .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */\n",
+       "body .s2 { color: #BA2121 } /* Literal.String.Double */\n",
+       "body .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */\n",
+       "body .sh { color: #BA2121 } /* Literal.String.Heredoc */\n",
+       "body .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */\n",
+       "body .sx { color: #008000 } /* Literal.String.Other */\n",
+       "body .sr { color: #BB6688 } /* Literal.String.Regex */\n",
+       "body .s1 { color: #BA2121 } /* Literal.String.Single */\n",
+       "body .ss { color: #19177C } /* Literal.String.Symbol */\n",
+       "body .bp { color: #008000 } /* Name.Builtin.Pseudo */\n",
+       "body .vc { color: #19177C } /* Name.Variable.Class */\n",
+       "body .vg { color: #19177C } /* Name.Variable.Global */\n",
+       "body .vi { color: #19177C } /* Name.Variable.Instance */\n",
+       "body .il { color: #666666 } /* Literal.Number.Integer.Long */\n",
+       "\n",
+       "  </style>\n",
+       "</head>\n",
+       "<body>\n",
+       "<h2></h2>\n",
+       "\n",
+       "<div class=\"highlight\"><pre><span></span><span class=\"k\">def</span> <span class=\"nf\">WalkSAT</span><span class=\"p\">(</span><span class=\"n\">clauses</span><span class=\"p\">,</span> <span class=\"n\">p</span><span class=\"o\">=</span><span class=\"mf\">0.5</span><span class=\"p\">,</span> <span class=\"n\">max_flips</span><span class=\"o\">=</span><span class=\"mi\">10000</span><span class=\"p\">):</span>\n",
+       "    <span class=\"sd\">&quot;&quot;&quot;Checks for satisfiability of all clauses by randomly flipping values of variables</span>\n",
+       "<span class=\"sd\">    &gt;&gt;&gt; WalkSAT([A &amp; ~A], 0.5, 100) is None</span>\n",
+       "<span class=\"sd\">    True</span>\n",
+       "<span class=\"sd\">    &quot;&quot;&quot;</span>\n",
+       "    <span class=\"c1\"># Set of all symbols in all clauses</span>\n",
+       "    <span class=\"n\">symbols</span> <span class=\"o\">=</span> <span class=\"p\">{</span><span class=\"n\">sym</span> <span class=\"k\">for</span> <span class=\"n\">clause</span> <span class=\"ow\">in</span> <span class=\"n\">clauses</span> <span class=\"k\">for</span> <span class=\"n\">sym</span> <span class=\"ow\">in</span> <span class=\"n\">prop_symbols</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">)}</span>\n",
+       "    <span class=\"c1\"># model is a random assignment of true/false to the symbols in clauses</span>\n",
+       "    <span class=\"n\">model</span> <span class=\"o\">=</span> <span class=\"p\">{</span><span class=\"n\">s</span><span class=\"p\">:</span> <span class=\"n\">random</span><span class=\"o\">.</span><span class=\"n\">choice</span><span class=\"p\">([</span><span class=\"bp\">True</span><span class=\"p\">,</span> <span class=\"bp\">False</span><span class=\"p\">])</span> <span class=\"k\">for</span> <span class=\"n\">s</span> <span class=\"ow\">in</span> <span class=\"n\">symbols</span><span class=\"p\">}</span>\n",
+       "    <span class=\"k\">for</span> <span class=\"n\">i</span> <span class=\"ow\">in</span> <span class=\"nb\">range</span><span class=\"p\">(</span><span class=\"n\">max_flips</span><span class=\"p\">):</span>\n",
+       "        <span class=\"n\">satisfied</span><span class=\"p\">,</span> <span class=\"n\">unsatisfied</span> <span class=\"o\">=</span> <span class=\"p\">[],</span> <span class=\"p\">[]</span>\n",
+       "        <span class=\"k\">for</span> <span class=\"n\">clause</span> <span class=\"ow\">in</span> <span class=\"n\">clauses</span><span class=\"p\">:</span>\n",
+       "            <span class=\"p\">(</span><span class=\"n\">satisfied</span> <span class=\"k\">if</span> <span class=\"n\">pl_true</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">,</span> <span class=\"n\">model</span><span class=\"p\">)</span> <span class=\"k\">else</span> <span class=\"n\">unsatisfied</span><span class=\"p\">)</span><span class=\"o\">.</span><span class=\"n\">append</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">)</span>\n",
+       "        <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"n\">unsatisfied</span><span class=\"p\">:</span>  <span class=\"c1\"># if model satisfies all the clauses</span>\n",
+       "            <span class=\"k\">return</span> <span class=\"n\">model</span>\n",
+       "        <span class=\"n\">clause</span> <span class=\"o\">=</span> <span class=\"n\">random</span><span class=\"o\">.</span><span class=\"n\">choice</span><span class=\"p\">(</span><span class=\"n\">unsatisfied</span><span class=\"p\">)</span>\n",
+       "        <span class=\"k\">if</span> <span class=\"n\">probability</span><span class=\"p\">(</span><span class=\"n\">p</span><span class=\"p\">):</span>\n",
+       "            <span class=\"n\">sym</span> <span class=\"o\">=</span> <span class=\"n\">random</span><span class=\"o\">.</span><span class=\"n\">choice</span><span class=\"p\">(</span><span class=\"nb\">list</span><span class=\"p\">(</span><span class=\"n\">prop_symbols</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">)))</span>\n",
+       "        <span class=\"k\">else</span><span class=\"p\">:</span>\n",
+       "            <span class=\"c1\"># Flip the symbol in clause that maximizes number of sat. clauses</span>\n",
+       "            <span class=\"k\">def</span> <span class=\"nf\">sat_count</span><span class=\"p\">(</span><span class=\"n\">sym</span><span class=\"p\">):</span>\n",
+       "                <span class=\"c1\"># Return the the number of clauses satisfied after flipping the symbol.</span>\n",
+       "                <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span> <span class=\"o\">=</span> <span class=\"ow\">not</span> <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span>\n",
+       "                <span class=\"n\">count</span> <span class=\"o\">=</span> <span class=\"nb\">len</span><span class=\"p\">([</span><span class=\"n\">clause</span> <span class=\"k\">for</span> <span class=\"n\">clause</span> <span class=\"ow\">in</span> <span class=\"n\">clauses</span> <span class=\"k\">if</span> <span class=\"n\">pl_true</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">,</span> <span class=\"n\">model</span><span class=\"p\">)])</span>\n",
+       "                <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span> <span class=\"o\">=</span> <span class=\"ow\">not</span> <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span>\n",
+       "                <span class=\"k\">return</span> <span class=\"n\">count</span>\n",
+       "\n",
+       "            <span class=\"n\">sym</span> <span class=\"o\">=</span> <span class=\"n\">argmax</span><span class=\"p\">(</span><span class=\"n\">prop_symbols</span><span class=\"p\">(</span><span class=\"n\">clause</span><span class=\"p\">),</span> <span class=\"n\">key</span><span class=\"o\">=</span><span class=\"n\">sat_count</span><span class=\"p\">)</span>\n",
+       "        <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span> <span class=\"o\">=</span> <span class=\"ow\">not</span> <span class=\"n\">model</span><span class=\"p\">[</span><span class=\"n\">sym</span><span class=\"p\">]</span>\n",
+       "    <span class=\"c1\"># If no solution is found within the flip limit, we return failure</span>\n",
+       "    <span class=\"k\">return</span> <span class=\"bp\">None</span>\n",
+       "</pre></div>\n",
+       "</body>\n",
+       "</html>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from notebook import psource, pseudocode\n",
     "\n",
     "psource(WalkSAT)\n",
-    "pseudocode(\"WalkSAT\")"
+    "#pseudocode(\"WalkSAT\")"
    ]
   },
   {
@@ -97,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
